# virtualizarr-data-pipelines

./: .env.sample  README.md  pyproject.toml
cdk/: app.py  settings.py  stack.py
docs/: architecture.excalidraw
lambda/append/: Dockerfile  handler.py  pyproject.toml
lambda/initialize/: handler.py
lambda/process_file/: Dockerfile  handler.py  pyproject.toml
lambda/virtualizarr-processor/virtualizarr_processor/: processor.py  typing.py
tests/: conftest.py  test_example.py
virtualizarr-processor/: pyproject.toml
virtualizarr-processor/virtualizarr_processor/: processor.py  typing.py
