[project]
name = "virtualizarr_data_pipelines"
version = "0.1.0"
description = "Virtualizarr/Icechunk ingestion infrastructure"
authors = [{name = "Sean Harkins", email = "sean@developmentseed.org"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aws-cdk-lib",
    "constructs>=10.0.0",
]

[tool.uv.workspace]
members = ["virtualizarr-processor"]

[tool.uv.sources]
virtualizarr-processor = { workspace = true }

[dependency-groups]
dev = [
  "mypy",
  "pre-commit",
  "nodeenv",
  "pydantic-settings>=2.8.1",
  "pytest",
  "ruff",
  "virtualizarr-processor",
]


[tool.ruff]
line-length = 88
target-version = "py38"
exclude = ["cdk.out", ".venv", "node_modules"]

[tool.ruff.lint]
select = ["E", "F", "I"]
per-file-ignores = {}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
explicit_package_bases = true
files = ["lambda", "cdk"]
